[gd_scene load_steps=6 format=3 uid="uid://bshberav0o2hk"]

[ext_resource type="Script" uid="uid://c4qhx0sd62v0p" path="res://demo/button.gd" id="1"]
[ext_resource type="Script" uid="uid://dkhiyifvpb81o" path="res://addons/scene_manager/scene_resource.gd" id="2_reowv"]

[sub_resource type="Resource" id="Resource_rakm7"]
script = ExtResource("2_reowv")
string_value = "SCENE1"

[sub_resource type="Resource" id="Resource_sxicq"]
script = ExtResource("2_reowv")
string_value = "SCENE1"

[sub_resource type="Resource" id="Resource_x5prp"]
script = ExtResource("2_reowv")
string_value = "SCENE1"

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.831373, 0.298039, 0.298039, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -6.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="loading_scene_initialization" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "LOADING SCREEN
WITH WAIT"
script = ExtResource("1")
scene = SubResource("Resource_rakm7")
fade_out_speed = 0.2
fade_in_speed = 0.0
add_to_back = false

[node name="loading_scene" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Loading Scene"
script = ExtResource("1")
scene = SubResource("Resource_sxicq")
fade_in_speed = 2.0
add_to_back = false

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="next_scene" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "SCENE 3"
script = ExtResource("1")
scene = SubResource("Resource_x5prp")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="reset" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "RESET"
script = ExtResource("1")

[node name="reload" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "RELOAD"
script = ExtResource("1")
fade_out_speed = 0.2
fade_in_speed = 0.2

[node name="back" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "BACK"
script = ExtResource("1")
fade_out_speed = 0.0
fade_in_speed = 0.0

[node name="exit" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "EXIT"
script = ExtResource("1")
fade_out_speed = 0.3

[connection signal="button_up" from="CenterContainer/VBoxContainer/loading_scene_initialization" to="CenterContainer/VBoxContainer/loading_scene_initialization" method="_on_loading_scene_initialization_button_up"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/loading_scene" to="CenterContainer/VBoxContainer/loading_scene" method="_on_loading_scene_button_up"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/HBoxContainer/next_scene" to="CenterContainer/VBoxContainer/HBoxContainer/next_scene" method="_on_button_button_up"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/reset" to="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/reset" method="_on_reset_button_up"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/reload" to="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/reload" method="_on_reload_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/back" to="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/back" method="_on_back_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/exit" to="CenterContainer/VBoxContainer/exit" method="_on_exit_pressed"]
